ch04/pentest_lab/secure_network/main.tf
resource "google_compute_project_metadata" "default" {
  metadata = {
    "serial-port-enable" = "TRUE"
  }
}

resource "google_compute_network" "vpc_01" {
  name = "vpc-01"
  auto_create_subnetworks = "false"
}

resource "google_compute_subnetwork" "subnet_01" {
  name          = "subnet-01"
  ip_cidr_range = "10.1.0.0/20"
  region        = "us-central1"
  network       = google_compute_network.vpc_01.name
}

resource "google_compute_network" "vpc_02" {
  name = "vpc-02"
  auto_create_subnetworks = "false"
}

resource "google_compute_subnetwork" "subnet_02" {
  name          = "subnet-02"
  ip_cidr_range = "10.2.0.0/20"
  region        = "us-central1"
  network       = google_compute_network.vpc_02.name
}

locals {
  net_01 = google_compute_network.vpc_01.self_link
  net_02 = google_compute_network.vpc_02.self_link
}

resource "google_compute_network_peering" "peer_01_to_02" {
  name         = "peer-01-to-02"
  network      = local.net_01
  peer_network = local.net_02
}

resource "google_compute_network_peering" "peer_02_to_01" {
  name         = "peer-02-to-01"
  network      = local.net_02
  peer_network = local.net_01
}

resource "google_compute_firewall" "allow-all-from-vpc2" {
  name    = "allow-all-from-vpc-2"
  network = local.net_01

  allow {
    protocol = "all"    
  }
  source_ranges = ["10.2.0.0/20"]
  priority = 10000
}

resource "google_compute_firewall" "allow-all-from-vpc1" {
  name    = "allow-all-from-vpc-1"
  network = local.net_02

  allow {
    protocol = "all"    
  }
  source_ranges = ["10.1.0.0/20"]

  priority = 20000
}

resource "google_compute_firewall" "allow-ssh-from-my-ip" {
  name    = "allow-ssh-from-my-ip"
  network = local.net_02

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["${var.my_ip}/32"]

  priority = 30000
}

resource "google_compute_firewall" "allow-desktop-access-from-my-ip" {
  name    = "allow-desktop-access-from-my-ip"
  network = local.net_02

  allow {
    protocol = "tcp"
    ports    = ["8081"]
  }

  source_ranges = ["${var.my_ip}/32"]

  priority = 40000
}
